locale,serialization: the week rules are one region table, and the suite-only jep290 failure is a sibling's global clear
Retires three known-issues pages. Each one is fixed, measured in both
directions, and moved to docs/internal/retired with a header recording what
the page could not name.

1. Calendar reported 1/1 week rules for EVERY locale. Two defects in series,
   either of which alone produces that symptom:

   - locale_resources.rs synthesised the CalendarData bundle with a bare "1"
     where CLDR has a region-keyed table ("1: AG AS ... US ...;2: 001 AD ...
     DE ...;6: MV;7: AE ..."), so CLDRCalendarDataProviderImpl found no region
     and answered 0. New populate_calendar_data_from_cldr reads the image's own
     sun/util/resources/cldr/CalendarData.class through load_cldr_table -- the
     mechanism cldr_collation_rule already uses -- and keeps the curated table
     as the fallback for an image that has no such class.

   - locale_bootstrap.rs answered null for every SPI in
     getLocaleServiceProvider, and CalendarDataUtility reaches its provider
     through LocaleServiceProviderPool, which reaches every candidate through
     that method. Wave-6 adds the CalendarDataProvider arm, in the one-SPI-at-
     a-time shape the wave-4 note prescribes.

   The two must land together: the 2026-09-09 attempt at the arm alone made
   every locale answer the same wrong thing and regressed the en-US control.

   Measured, all four cells (21/25 x --real-jdk/--jdk-only), HotSpot 21 as the
   oracle and en-US as the control the page fixed in advance:

     Calendar.getInstance    en-US        de-DE          fr-FR
       HotSpot 21            1/1          2/4            2/4
       before                1/1          1/1  WRONG     1/1  WRONG
       after                 1/1  held    2/4            2/4

2. jep290_unbounded_defaults_do_not_reject failed inside the 4408-test binary
   and passed alone. reset_serialization_globals() cleared the WHOLE of the
   address-